// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time adds additional class name if supplied 1`] = `
<div>
  <time
    class="this-classes were-added"
  >
    March 22, 1991
  </time>
</div>
`;

exports[`Time renders without crashing 1`] = `
<div>
  <time
    class="reactist_time"
  >
    moments ago
  </time>
</div>
`;
